--- a/app/src/main/res/layout/fragment_verification_code.xml
+++ b/app/src/main/res/layout/fragment_verification_code.xml
@@ -10,31 +10,16 @@
         android:layout_height="wrap_content"
         android:paddingBottom="30dp">
 
-        <ImageView
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/fragment_verification_code_return_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="30dp"
-            android:scaleType="center"
-            android:src="@drawable/ic_arrow_white_left"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            app:navigationIcon="@drawable/ic_arrow_white_left"
+            app:title="Подтвердите"
+            app:titleTextAppearance="@style/Toolbar.TitleText"
+            app:titleTextColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/fragment_verification_code_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Подтвердите"
-            android:textColor="@color/white"
-            android:textColorHint="#9D9E9E"
-            android:textSize="24sp"
-            android:layout_marginStart="17dp"
-            app:layout_constraintStart_toEndOf="@id/fragment_verification_code_return_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/fragment_verification_code_return_button"
-            app:layout_constraintBottom_toBottomOf="@id/fragment_verification_code_return_button"
-            />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
             android:id="@+id/fragment_verification_code_instruction"
@@ -48,7 +33,7 @@
             android:layout_marginTop="200dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fragment_verification_code_title"
+            app:layout_constraintTop_toBottomOf="@id/fragment_verification_code_return_button"
             />
 
         <com.start.dvizk.registration.customview.CodeVerificationView
