--- a/app/src/main/res/layout/fragment_order_command_data_step.xml
+++ b/app/src/main/res/layout/fragment_order_command_data_step.xml
@@ -2,94 +2,82 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:focusable="true"
-    android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="24dp"
-    android:background="@color/app_background">
+    android:background="@color/app_background"
+    android:clickable="true"
+    android:focusable="true">
 
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/fragment_order_command_data_step_continue"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/fragment_order_command_data_step_continue">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <androidx.appcompat.widget.Toolbar
                 android:id="@+id/fragment_order_command_data_step_return_button"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="24dp"
-                android:src="@drawable/ic_arrow_white_left"
+                android:layout_width="match_parent"
+                android:layout_height="?actionBarSize"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <TextView
-                android:id="@+id/fragment_order_command_data_step_title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginEnd="24dp"
-                android:text="Оформление заказа"
-                android:textColor="@color/white"
-                android:textSize="24sp"
-                android:fontFamily="@font/app_font_bd"
-                app:layout_constraintTop_toTopOf="@id/fragment_order_command_data_step_return_button"
-                app:layout_constraintStart_toEndOf="@id/fragment_order_command_data_step_return_button"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="@id/fragment_order_command_data_step_return_button" />
+                app:navigationIcon="@drawable/ic_arrow_white_left"
+                app:title="Оформление заказа"
+                app:titleTextAppearance="@style/Toolbar.TitleText"
+                app:titleTextColor="@color/white" />
 
             <TextView
                 android:id="@+id/fragment_order_command_data_step_subtitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/app_font_md"
                 android:text="Командные данные"
                 android:textColor="@color/white"
                 android:textSize="20sp"
-                android:fontFamily="@font/app_font_md"
-                app:layout_constraintTop_toBottomOf="@id/fragment_order_command_data_step_title"
-                app:layout_constraintStart_toStartOf="@id/fragment_order_command_data_step_return_button"
-                app:layout_constraintEnd_toStartOf="@id/fragment_order_command_data_plus_icon" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/fragment_order_command_data_step_return_button" />
 
             <ImageView
                 android:id="@+id/fragment_order_command_data_plus_icon"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="30dp"
                 android:src="@drawable/ic_add_accent"
-                app:layout_constraintTop_toTopOf="@id/fragment_order_command_data_step_subtitle"
-                app:layout_constraintEnd_toEndOf="@id/fragment_order_command_data_step_title"
-                app:layout_constraintBottom_toBottomOf="@id/fragment_order_command_data_step_subtitle" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/fragment_order_command_data_step_return_button" />
 
             <EditText
                 android:id="@+id/fragment_order_command_data_step_command_name_edit_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/bg_gradient_dark_grey_button"
+                android:fontFamily="@font/app_font_md"
                 android:hint="Название команды"
                 android:padding="20dp"
-                android:textColorHint="@color/grey_default"
                 android:textColor="@color/white"
+                android:textColorHint="@color/grey_default"
                 android:textSize="14sp"
-                android:fontFamily="@font/app_font_md"
-                android:background="@drawable/bg_gradient_dark_grey_button"
-                app:layout_constraintTop_toBottomOf="@id/fragment_order_command_data_step_subtitle"
-                app:layout_constraintStart_toStartOf="@id/fragment_order_command_data_step_return_button"
-                app:layout_constraintEnd_toEndOf="@id/fragment_order_command_data_step_title" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/fragment_order_command_data_step_subtitle" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/fragment_order_command_data_step_recycler_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false"
-                app:layout_constraintEnd_toEndOf="@id/fragment_order_command_data_step_title"
+                android:layout_marginHorizontal="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/fragment_order_command_data_step_return_button"
                 app:layout_constraintTop_toBottomOf="@id/fragment_order_command_data_step_command_name_edit_text"
                 tools:itemCount="3"
@@ -103,12 +91,12 @@
         android:id="@+id/fragment_order_command_data_step_continue"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingTop="19dp"
-        android:paddingBottom="33dp"
         android:background="@color/card_bg"
-        app:layout_constraintStart_toStartOf="parent"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/fragment_order_command_data_step_continue_button"
@@ -116,15 +104,15 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
             android:background="@drawable/bg_purple_button"
+            android:fontFamily="@font/app_font_bd"
             android:text="Продолжить 5000₸"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="18sp"
-            android:fontFamily="@font/app_font_bd"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
