--- a/app/src/main/res/layout/fragment_order_tickets_count_step.xml
+++ b/app/src/main/res/layout/fragment_order_tickets_count_step.xml
@@ -6,42 +6,27 @@
     android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="24dp"
     android:background="@color/app_background">
 
-    <ImageView
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/fragment_order_tickets_count_step_return_button"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="24dp"
-        android:src="@drawable/ic_arrow_white_left"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/fragment_order_tickets_count_step_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="24dp"
-        android:text="Оформление заказа"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        android:fontFamily="@font/app_font_bd"
-        app:layout_constraintTop_toTopOf="@id/fragment_order_tickets_count_step_return_button"
-        app:layout_constraintStart_toEndOf="@id/fragment_order_tickets_count_step_return_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_order_tickets_count_step_return_button" />
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        app:navigationIcon="@drawable/ic_arrow_white_left"
+        app:title="Оформление заказа"
+        app:titleTextAppearance="@style/Toolbar.TitleText"
+        app:titleTextColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <View
         android:id="@+id/fragment_order_tickets_count_step_separator"
         android:layout_width="0dp"
         android:layout_height="2dp"
-        android:layout_marginTop="24dp"
         android:background="@drawable/bg_gradient_dark_grey_button"
-        app:layout_constraintTop_toBottomOf="@id/fragment_order_tickets_count_step_title"
-        app:layout_constraintStart_toStartOf="@id/fragment_order_tickets_count_step_return_button"
-        app:layout_constraintEnd_toEndOf="@id/fragment_order_tickets_count_step_title" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_order_tickets_count_step_return_button" />
 
     <TextView
         android:id="@+id/fragment_order_tickets_count_step_subtitle"
@@ -51,10 +36,10 @@
         android:text="Выберите кол-во билетов"
         android:textColor="@color/white"
         android:textSize="20sp"
+        android:layout_marginStart="20dp"
         android:fontFamily="@font/app_font_bd"
         app:layout_constraintTop_toBottomOf="@id/fragment_order_tickets_count_step_separator"
-        app:layout_constraintStart_toStartOf="@id/fragment_order_tickets_count_step_return_button"
-        app:layout_constraintEnd_toEndOf="@id/fragment_order_tickets_count_step_title" />
+        app:layout_constraintStart_toStartOf="@id/fragment_order_tickets_count_step_return_button" />
 
     <Button
         android:id="@+id/fragment_order_tickets_count_step_remove_button"
@@ -100,8 +85,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingTop="19dp"
-        android:paddingBottom="33dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:background="@color/card_bg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
