--- a/app/src/main/res/layout/item_event_participant.xml
+++ b/app/src/main/res/layout/item_event_participant.xml
@@ -55,7 +55,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="+7 777 777 7777"
+            android:text="+7 (777) 777 77 77"
             android:textColor="@color/ticket_subtitle_color"
             android:textSize="11dp"
             android:layout_marginEnd="5dp"
